# template_cpp

./: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  mp.cpp
tlab/: CMakeLists.txt
tlab/include/tlab/: mp.hpp  tlab.hpp
tlab/src/: tlab.cpp
